# csp-benchmarks

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  benchmark.sh  measure_mem_avg.sh
.github/: copilot-instructions.md
.github/actions/install-ligero/: action.yml
.github/agents/: CONTRIBUTING_AGENT.md
.github/workflows/: collect_results.yml  dispatch_benchmarks.yml  lints.yml  rust_benchmarks_parallel.yml  sh_benchmarks_parallel.yml  supabase_upload.yml
barretenberg/: README.md  bench_props.json  poseidon2_measure.sh  poseidon2_prepare.sh  poseidon2_prove.sh  poseidon2_prove_for_verify.sh
barretenberg/circuits/: Nargo.toml
barretenberg/circuits/hash/poseidon2/: Nargo.toml
binius64/: Cargo.toml  README.md
binius64/src/: lib.rs
cairo-m/: Cargo.toml
cairo-m/benches/: sha256_bench.rs
cairo-m/src/: lib.rs
circom/: Cargo.toml
circom/src/: lib.rs
hyperplonk/: Cargo.toml
hyperplonk/benches/: keccak.rs  keccak_4.rs  keccak_5.rs  keccak_5_100.rs  keccak_8.rs
hyperplonk/src/: lib.rs
hyperplonk/src/keccak/: byte_sponge_air.rs  byte_trace.rs  mod.rs  sponge_air.rs  trace.rs  xor_lookup_air.rs
hyperplonk/tests/: keccak_rewrite_mode.rs  keccak_roundtrip.rs  sponge_zero_iv.rs
jolt/: Cargo.toml
jolt/benches/: ecdsa.rs  keccak.rs  sha256.rs
jolt/guest/ecdsa/: Cargo.toml
jolt/guest/ecdsa/src/: main.rs
jolt/guest/keccak/: Cargo.toml
jolt/guest/keccak/src/: main.rs
jolt/guest/sha256/: Cargo.toml
jolt/guest/sha256/src/: main.rs
jolt/src/: lib.rs
ligetron/: common_prepare.sh  ecdsa_prepare.sh  measure.sh  osx_local_setup.sh  poseidon2_prepare.sh  prove.sh  sha256_prepare.sh  verify.sh
miden/: Cargo.toml
miden/benches/: ecdsa.rs  sha256.rs
miden/guest/ecdsa/: ecdsa.masm
miden/src/: lib.rs
nexus/: Cargo.toml
nexus/benches/: keccak.rs  sha256.rs
nexus/guest/keccak/: Cargo.toml
nexus/guest/keccak/src/: main.rs
nexus/src/: lib.rs
openvm/: Cargo.toml
openvm/benches/: sha256.rs
openvm/src/: lib.rs
plonky2/: Cargo.toml
plonky2/benches/: keccak.rs  poseidon.rs  sha256.rs
plonky2/src/: bench.rs  lib.rs  main.rs
plonky2/src/keccak256/: circuit.rs  mod.rs  u64target.rs
plonky2/src/sha256/: circuit.rs
polyhedra-expander/: Cargo.toml  rust-toolchain.toml
polyhedra-expander/benches/: prove_verify.rs
provekit/: Cargo.toml
provekit/benches/: keccak.rs
provekit/circuits/: Nargo.toml
provekit/circuits/hash/keccak/src/: main.nr
provekit/src/: lib.rs
results/: collected_benchmarks_whir.json  collected_benchmarks_whir_4fc29b6bc636a78309560441c17c2cfeffe99319.json  collected_benchmarks_whir_7b96d3938c0c725e636aea00356395b1ef5c42ef.json  extension_fields.json  masking.json  masking_80.json  multiproof.json  v2_encoding.json
results/visualizer/: README.MD  plot_benchmarks.py
risc0/: Cargo.toml
risc0/src/: lib.rs
rookie-numbers/: Cargo.toml
rookie-numbers/benches/: sha256.rs
rookie-numbers/src/: lib.rs
sp1/: Cargo.toml
sp1/benches/: sha256.rs
sp1/src/: lib.rs
spartan2/: Cargo.toml  README.md
spartan2/benches/: sha256.rs
spartan2/src/: lib.rs
spartan2/src/circuits/: mod.rs  sha256_circuit.rs
utils/: Cargo.toml
utils/src/: bench.rs  harness.rs  lib.rs  main.rs
utils/src/ligetron/: mod.rs  poseidon2.rs  poseidon2_constant.rs
whirlaway/: Cargo.toml
whirlaway/benches/: keccak.rs  keccak_4.rs  keccak_5.rs  keccak_5_100.rs  keccak_8.rs
whirlaway/src/: lib.rs
