[workspace]
resolver = "3"
members = [
    "binius64",
    "hyperplonk",
    "plonky2",
    "openvm",
    "provekit",
    "polyhedra-expander",
    "circom",
    "jolt",
    "miden",
    "risc0",
    "sp1",
    "utils",
]
exclude = [
    "cairo-m",
    "nexus"
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive", "env"] }
criterion = "0.5.1"
ere-zkvm-interface = { git = "https://github.com/eth-act/ere", rev = "aaf2efcc78fecf5f3b7d149a0042c97057a10fb6" }
env_logger = "0.10.0"
hex = "0.4.3"
itertools = "0.13.0"
log = "0.4.14"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10"
sha3 = "0.10.8"
tracing = "0.1.40"

# Local
utils = { path = "utils" }

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }

[patch."https://github.com/Plonky3/Plonky3"]
p3-air = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-challenger = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-commit = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-dft = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-field = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-interpolation = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-keccak = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-keccak-air = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-koala-bear = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-matrix = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-maybe-rayon = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-mds = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-merkle-tree = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-monty-31 = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-multilinear-util = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-poseidon2 = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-symmetric = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }
p3-util = { git = "https://github.com/Plonky3//Plonky3", rev = "a9d5bbb5" }