[workspace]
resolver = "3"
members = [
    "binius64",
    "plonky2",
    "openvm",
    "provekit",
    "polyhedra-expander",
    "circom",
    "jolt",
    "miden",
    "risc0",
    "sp1",
    "spartan2",
    "utils",
]
exclude = [
    "cairo-m",
    "nexus",
]

[workspace.dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive", "env"] }
criterion = "0.5.1"
ere-zkvm-interface = { git = "https://github.com/eth-act/ere", rev = "66c516a24d9c3549f76b84f72365ab544299e63a" }
env_logger = "0.10.0"
hex = "0.4.3"
itertools = "0.13.0"
log = "0.4.14"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10"
sha3 = "0.10.8"
tracing = "0.1.40"

# Local
utils = { path = "utils" }

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
