[package]
name = "hyperplonk"
version = "0.1.0"
edition = "2024"

[lib]

[features]
test-utils = []

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
utils = { workspace = true }

# HyperPlonk system (preferred: git pinned).
p3-hyperplonk = { git = "https://github.com/alxkzmn/p3-playground", rev = "23a6b57", package = "p3-hyperplonk", features = ["bench"] }
p3-whir = { git = "https://github.com/alxkzmn/p3-playground", rev = "23a6b57", package = "p3-whir", features = ["parallel"] }

# Plonky3 deps (pulled via the p3-playground workspace)
p3-air = { git = "https://github.com/Plonky3/Plonky3" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3", package = "p3-keccak-air" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3" }

tracing-forest = "0.1.6"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["alloc", "std", "env-filter"] }

[target.'cfg(target_family = "unix")'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
hyperplonk = { path = ".", features = ["test-utils"] }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-hyperplonk = { git = "https://github.com/alxkzmn/p3-playground", rev = "23a6b57", package = "p3-hyperplonk", features = ["bench"] }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3", package = "p3-keccak-air" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3" }

[[bench]]
name = "keccak"
harness = false

[[bin]]
name = "keccak_mem_hyperplonk"
path = "src/bin/keccak_mem.rs"

