[package]
name = "hyperplonk"
version = "0.1.0"
edition = "2024"

[lib]

[features]
test-utils = []

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
utils = { workspace = true }

# HyperPlonk
p3-hyperplonk = { path = "./p3-playground/hyperplonk", features = ["bench"] }
p3-whir = { path = "./p3-playground/whir", features = ["parallel"] }

# Plonky3 deps (pulled via the p3-playground workspace)
p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05", package = "p3-keccak-air" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05" }

tracing-forest = "0.1.6"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["alloc", "std", "env-filter"] }

[target.'cfg(target_family = "unix")'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
hyperplonk = { path = ".", features = ["test-utils"] }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05" }
p3-hyperplonk = { path = "./p3-playground/hyperplonk", features = ["bench"] }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05", package = "p3-keccak-air" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "c38eb05" }

[[bench]]
name = "keccak_4"
harness = false

[[bench]]
name = "keccak_5"
harness = false

[[bench]]
name = "keccak_8"
harness = false

[[bin]]
name = "keccak_mem_hyperplonk_4"
path = "src/bin/keccak_mem_4.rs"

[[bin]]
name = "keccak_mem_hyperplonk_5"
path = "src/bin/keccak_mem_5.rs"

[[bin]]
name = "keccak_mem_hyperplonk_8"
path = "src/bin/keccak_mem_8.rs"

