[package]
name = "jolt"
version = "0.1.0"
edition = "2024"

[dependencies]
ere-jolt = { git = "https://github.com/eth-act/ere", rev = "66c516a24d9c3549f76b84f72365ab544299e63a" }
postcard = { version = "1.0", features = ["alloc"] }

# Workspace
criterion = { workspace = true }
clap = { workspace = true }
ere-zkvm-interface = { workspace = true }
serde = { workspace = true }
utils = { workspace = true }

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "keccak"
harness = false

[[bench]]
name = "ecdsa"
harness = false

[[bin]]
name = "sha256_mem_jolt"
path = "src/bin/sha256_mem.rs"

[[bin]]
name = "keccak_mem_jolt"
path = "src/bin/keccak_mem.rs"

[[bin]]
name = "ecdsa_mem_jolt"
path = "src/bin/ecdsa_mem.rs"
