[package]
name = "nexus"
version = "0.1.0"
edition = "2024"

[dependencies]
zmij = "=1.0.0"
ere-nexus = { git = "https://github.com/eth-act/ere", rev = "66c516a24d9c3549f76b84f72365ab544299e63a" }
ere-zkvm-interface = { git = "https://github.com/eth-act/ere", rev = "66c516a24d9c3549f76b84f72365ab544299e63a" }
criterion = "0.5"
clap = { version = "4.5", features = ["derive", "env"] }
utils = { path = "../utils" }

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "keccak"
harness = false

[[bin]]
name = "sha256_mem_nexus"
path = "src/bin/sha256_mem.rs"

[[bin]]
name = "keccak_mem_nexus"
path = "src/bin/keccak_mem.rs"
