[package]
name = "openvm"
version = "0.1.0"
edition = "2024"

[dependencies]
ere-openvm = { git = "https://github.com/eth-act/ere", rev = "66c516a24d9c3549f76b84f72365ab544299e63a", default-features = false, features = ["compiler", "zkvm"] }

# Workspace
criterion = { workspace = true }
clap = { workspace = true }
utils = { workspace = true }
ere-zkvm-interface = { workspace = true }
bincode = { workspace = true }
toml = "0.9"

[[bench]]
name = "sha256"
harness = false

[[bin]]
name = "sha256_mem_openvm"
path = "src/bin/sha256_mem.rs"
