[package]
name = "provekit"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
utils = { workspace = true }
criterion = { workspace = true }
clap = { workspace = true }
provekit-common = { git = "https://github.com/worldfnd/ProveKit", rev = "7005a9305722ac831f68fc37e662db9a032bf0a6"}
provekit-r1cs-compiler = { git = "https://github.com/worldfnd/ProveKit", rev = "7005a9305722ac831f68fc37e662db9a032bf0a6"}
provekit-prover = { git = "https://github.com/worldfnd/ProveKit", rev = "7005a9305722ac831f68fc37e662db9a032bf0a6"}
provekit-verifier = { git = "https://github.com/worldfnd/ProveKit", rev = "7005a9305722ac831f68fc37e662db9a032bf0a6"}

[[bin]]
name = "sha256_mem_provekit"
path = "src/bin/sha256_mem.rs"

[[bin]]
name = "ecdsa_mem_provekit"
path = "src/bin/ecdsa_mem.rs"

[[bin]]
name = "poseidon_mem_provekit"
path = "src/bin/poseidon_mem.rs"

[[bin]]
name = "keccak_mem_provekit"
path = "src/bin/keccak_mem.rs"

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "ecdsa"
harness = false

[[bench]]
name = "poseidon"
harness = false

[[bench]]
name = "keccak"
harness = false
