[package]
name = "rookie-numbers"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
sha256 = { git = "https://github.com/clementwalter/rookie-numbers", rev = "7ac382bc92cf869c07249afab6f392e22b5f3742", default-features = false, features = [
  "parallel",
] }
utils = { path = "../utils" }
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
criterion = "0.5"

[[bench]]
name = "sha256"
harness = false

[[bin]]
name = "sha256_mem_rookie_numbers"
path = "src/bin/sha256_mem.rs"
