[package]
name = "whirlaway-bench"
version = "0.1.0"
edition = "2024"

[lib]
name = "whirlaway"

[dependencies]
whir-p3 = { path = "../whir-p3" }
anyhow = "1.0.81"
clap = { version = "4.5.20", features = ["derive", "env"] }
criterion = "0.5.1"
utils = { path = "../utils" }

whirlaway_sys = { package = "whirlaway", path = "Whirlaway" }

[[bench]]
name = "keccak"
harness = false

[[bin]]
name = "keccak_mem_whirlaway"
path = "src/bin/keccak_mem.rs"
