[package]
name = "whirlaway-bench"
version = "0.1.0"
edition = "2024"

[lib]
name = "whirlaway"

[dependencies]
whir-p3 = { path = "../whir-p3" }
anyhow = "1.0.81"
clap = { version = "4.5.20", features = ["derive", "env"] }
criterion = "0.5.1"
utils = { path = "../utils" }

whirlaway_sys = { package = "whirlaway", path = "Whirlaway/whirlaway",  features = ["keccak_no_prefix"] }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "c38eb05" }

[[bench]]
name = "keccak_4"
harness = false

[[bench]]
name = "keccak_8"
harness = false

[[bench]]
name = "keccak_5"
harness = false

[[bench]]
name = "keccak_5_100"
harness = false

[[bin]]
name = "keccak_mem_whirlaway_4"
path = "src/bin/keccak_mem_whirlaway_4.rs"

[[bin]]
name = "keccak_mem_whirlaway_5"
path = "src/bin/keccak_mem_whirlaway_5.rs"

[[bin]]
name = "keccak_mem_whirlaway_5_100"
path = "src/bin/keccak_mem_whirlaway_5_100.rs"

[[bin]]
name = "keccak_mem_whirlaway_8"
path = "src/bin/keccak_mem_whirlaway_8.rs"
